apps/jupyterhub/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jupyterhub-datalabs-eiar
  namespace: jupyterhub
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jupyterhub.datalabs.eiar.scio.services`)
      kind: Rule
      services:
        - name: proxy-public
          port: 80
  tls:
    secretName: jupyterhub-datalabs-eiar-scio-services-tls
